[gd_scene load_steps=9 format=3 uid="uid://ccagt5in31u65"]

[ext_resource type="Script" uid="uid://cwp15r64sl5nu" path="res://scripts/player_ui.gd" id="1_i8egv"]
[ext_resource type="Texture2D" uid="uid://djjesrwansg2r" path="res://assets/tilesets/colored-transparent_packed.png" id="2_2lr7m"]
[ext_resource type="LabelSettings" uid="uid://gekll6thf6cf" path="res://scenes/ui/main_game_ui_label.tres" id="3_l6kk8"]
[ext_resource type="Texture2D" uid="uid://cbx7ej1knm7d6" path="res://assets/images/littleCharacter2.png" id="4_bb4rc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_l6kk8"]
atlas = ExtResource("2_2lr7m")
region = Rect2(448, 320, 15, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_2lr7m"]
atlas = ExtResource("2_2lr7m")
region = Rect2(736, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb4rc"]
atlas = ExtResource("2_2lr7m")
region = Rect2(768, 272, 16, 16)

[sub_resource type="Theme" id="Theme_48pfk"]

[node name="MainGameUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
groups = ["MainGameUI"]

[node name="PlayerUi" type="CenterContainer" parent="."]
z_index = 1000
layout_mode = 0
offset_right = 56.0
offset_bottom = 56.0
script = ExtResource("1_i8egv")

[node name="DirectionArrows" type="GridContainer" parent="PlayerUi"]
layout_mode = 2
size_flags_horizontal = 4
columns = 3

[node name="up_left" type="Control" parent="PlayerUi/DirectionArrows"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3

[node name="arrow" type="TextureRect" parent="PlayerUi/DirectionArrows/up_left"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
rotation = -0.7853982
pivot_offset = Vector2(8, 8)
texture = SubResource("AtlasTexture_l6kk8")

[node name="up" type="Control" parent="PlayerUi/DirectionArrows"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3

[node name="arrow" type="TextureRect" parent="PlayerUi/DirectionArrows/up"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
pivot_offset = Vector2(8, 8)
texture = SubResource("AtlasTexture_l6kk8")

[node name="up_right" type="Control" parent="PlayerUi/DirectionArrows"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3

[node name="arrow" type="TextureRect" parent="PlayerUi/DirectionArrows/up_right"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
rotation = 0.7853982
pivot_offset = Vector2(8, 8)
texture = SubResource("AtlasTexture_l6kk8")

[node name="left" type="Control" parent="PlayerUi/DirectionArrows"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3

[node name="arrow" type="TextureRect" parent="PlayerUi/DirectionArrows/left"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
rotation = -1.5707964
pivot_offset = Vector2(8, 8)
texture = SubResource("AtlasTexture_l6kk8")

[node name="center" type="Control" parent="PlayerUi/DirectionArrows"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3

[node name="right" type="Control" parent="PlayerUi/DirectionArrows"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3

[node name="arrow" type="TextureRect" parent="PlayerUi/DirectionArrows/right"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
rotation = 1.5707964
pivot_offset = Vector2(8, 8)
texture = SubResource("AtlasTexture_l6kk8")

[node name="down_left" type="Control" parent="PlayerUi/DirectionArrows"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3

[node name="arrow" type="TextureRect" parent="PlayerUi/DirectionArrows/down_left"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
rotation = -2.3561945
pivot_offset = Vector2(8, 8)
texture = SubResource("AtlasTexture_l6kk8")

[node name="down" type="Control" parent="PlayerUi/DirectionArrows"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3

[node name="arrow" type="TextureRect" parent="PlayerUi/DirectionArrows/down"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
rotation = 3.1415927
pivot_offset = Vector2(8, 8)
texture = SubResource("AtlasTexture_l6kk8")

[node name="down_right" type="Control" parent="PlayerUi/DirectionArrows"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3

[node name="arrow" type="TextureRect" parent="PlayerUi/DirectionArrows/down_right"]
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
rotation = 2.3561945
pivot_offset = Vector2(8, 8)
texture = SubResource("AtlasTexture_l6kk8")

[node name="RollIcon" type="Control" parent="PlayerUi"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PlayerUi/RollIcon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.5
offset_top = -20.0
offset_right = 29.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Dice" type="TextureRect" parent="PlayerUi/RollIcon/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = SubResource("AtlasTexture_2lr7m")
stretch_mode = 2

[node name="Label" type="Label" parent="PlayerUi/RollIcon/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "[Space]"
label_settings = ExtResource("3_l6kk8")

[node name="RollNumber" type="Control" parent="PlayerUi"]
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="PlayerUi/RollNumber"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -23.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 0

[node name="DiceBox" type="TextureRect" parent="PlayerUi/RollNumber/CenterContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_bb4rc")

[node name="Number" type="Label" parent="PlayerUi/RollNumber/CenterContainer"]
layout_mode = 2
text = "5"
label_settings = ExtResource("3_l6kk8")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AsideContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -67.0
grow_horizontal = 0
grow_vertical = 2
theme = SubResource("Theme_48pfk")

[node name="CharacterStats" type="HBoxContainer" parent="CanvasLayer/AsideContainer"]
layout_mode = 2

[node name="Picture" type="TextureRect" parent="CanvasLayer/AsideContainer/CharacterStats"]
layout_mode = 2
texture = ExtResource("4_bb4rc")

[node name="Label" type="Label" parent="CanvasLayer/AsideContainer/CharacterStats"]
layout_mode = 2
text = "Slate"
